# simulated-kinect

./: CMakeLists.txt  KITWARE_LICENSE.TXT  README.txt  SimulatedKinect.cpp  VisualizeSDFWorld.cpp
collada2obj/: README.textile  README.txt  collada2obj.rb  verify.rb
collada2obj/testdae/meshes/: cafe.dae  cafe_table.dae
robot/dvfpebi281kw-Cyborg/: Cyborg.dae  Cyborg.mtl
worlds/: beerstable.world  cafebeers.world  gazebo.material  realscene.world
worlds/models/beer/: model.sdf
worlds/models/beer/materials/scripts/: beer.material
worlds/models/cafe/: cafe.obj.mtl
worlds/models/cafe_table/: cafe_table.obj.mtl
